--- a/src/app/components/ng-for/ng-for.component.html
+++ b/src/app/components/ng-for/ng-for.component.html
@@ -1,1 +1,40 @@
-<p>ng-for works!</p>
+<div class="row">
+    <div class="col-2">
+        <ul>
+            <li *ngFor="let city of cityList"> {{ city}}</li>
+        </ul>
+    </div>
+    <div class="col-5">
+        <button *ngFor="let cityName of cityList" class="btn btn-success mx-1">{{cityName}}</button>
+    </div>
+</div>
+
+<!-- Dynamica drop[down] -->
+<div class="row">
+    <div class="col-3">
+        <select>
+            <option  *ngFor="let employee of employeeList" [value]="employee.empId">
+                {{employee.name}} - {{ employee.city}}</option>
+        </select>
+    </div>
+    <div class="col-5">
+        <table class="col-5" class="table table-borderd">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>City</th>
+                    <th>Contact No.</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let emp of employeeList;let srno = index">
+                    <td>{{srno+1}}</td>
+                    <td>{{emp.name}}</td>
+                    <td>{{emp.city}}</td>
+                    <td>{{emp.contactNo}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
