--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,2 +1,4 @@
 <h1 class="text-title">Admin Page</h1>
 <p>This is the admin component page</p>
+
+<button class="btn btn-primary" [routerLink]="'/dataBinding'">Goto DataBinding</button>
