--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,26 @@
-<h1>This is the MAIN PAGE</h1>
-<app-linked-signals></app-linked-signals>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" [routerLink]="'admin'">Admin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'dataBinding'">Data Binding</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'ng-class'">Ng-Class</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'user'">User</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <router-outlet></router-outlet>
