--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,2 +1,4 @@
 <h1>User Page</h1>
 <p>This is the User component page</p>
+
+<button class="btn btn-primary" (click)="navigateToAdmin()">Go to Admin</button>
